--- a/app/assets/stylesheets/pages/_searchpage.scss
+++ b/app/assets/stylesheets/pages/_searchpage.scss
@@ -356,7 +356,7 @@
 
 .title-card-designer,
 .title-card-oeuvre {
-  font-size: 24px;
+  font-size: 100%;
   font-weight: 500;
   text-transform: uppercase;
   margin-top: 8px;
@@ -606,11 +606,6 @@
     height: 240px;
     padding: 15px;
   }
-
-  .title-card-designer,
-  .title-card-oeuvre {
-    font-size: 20px;
-  }
 }
 
 @media screen and (min-width: 426px) and (max-width: 600px) {
@@ -676,11 +671,6 @@
     height: 240px;
     padding: 15px;
   }
-
-  .title-card-designer,
-  .title-card-oeuvre {
-    font-size: 20px;
-  }
 }
 
 @media screen and (min-width: 601px) and (max-width: 768px) {
@@ -730,13 +720,7 @@
     height: 240px;
     padding: 15px;
   }
-
-  .title-card-designer,
-  .title-card-oeuvre {
-    font-size: 20px;
-  }
 }
-
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .flex-category,
   .flex-container {
@@ -760,11 +744,6 @@
     width: calc(24vw - 20px);
     height: 240px;
     padding: 15px;
-  }
-
-  .title-card-designer,
-  .title-card-oeuvre {
-    font-size: 20px;
   }
 }
 
@@ -792,11 +771,6 @@
     width: calc(24vw - 36px);
     height: 260px;
     padding: 15px;
-  }
-
-  .title-card-designer,
-  .title-card-oeuvre {
-    font-size: 20px;
   }
 }
 
